<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Artfinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="venues">Venues</string>
    <string name="events">Events</string>
    <string name="transportation">Transportation</string>
    <string name="connect">Connect</string>
    <string name="about">About</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_closed">Close Drawer</string>

    <string name="home_map">Map</string>
    <string name="home_venue">Venue</string>
    <string name="home_event">Event</string>
    <string name="home_trans">Transportation</string>

    <string name="venue_view_on_map">View on Map</string>
    <string name="venue_get_directions">Get Directions</string>
    <string name="venue_address">Address</string>
    <string name="venue_description">Description</string>
    <string name="venue_category">Category:</string>
    <string name="venue_phone_number">Phone Number:</string>

    <string name="event_time">Time</string>
    <string name="event_address">Address</string>
    <string name="event_description">Description</string>
    <string name="event_add_to_calendar">Add to Calendar</string>

    <string name="trans_start_point">My Location</string>
    <string name="trans_destination_point">Destination</string>
    <string name="trans_parking_garages">Parking Garages</string>
    <string name="trans_notice_header">Notice</string>
    <string name="trans_notice_text">This application launches Google Maps for directions.</string>
    <string name="trans_cat_header">Charlottesville Area Transit</string>
    <string name="trans_cat_text">CAT is a comprehensive public transportation system that services all of Charlottesville.
        Search for "Charlottesville Area Transit" in the PlayStore or tap the icon to download their free app. \n
        \n
        For more information about parking or the CAT, visit charlottesvilleparking.com or charlottesville.org/transit.</string>
    <string name="trans_cat_button">Get the CAT App</string>
    <string name="trans_empty_destination">Please enter a destination.</string>
    <string name="trans_water_street_garage">Water Street Garage</string>
    <string name="trans_water_street_lot">Water Street Lot</string>
    <string name="trans_market_street_garage">Market Street Garage</string>

    <string name="connect_facebook">Facebook</string>
    <string name="connect_twitter">Twitter</string>
    <string name="connect_pca">PCA Blog</string>

    <string-array name="nav_drawer_items">
        <item>@string/home</item>
        <item>@string/map</item>
        <item>@string/venues</item>
        <item>@string/events</item>
        <item>@string/transportation</item>
        <item>@string/connect</item>
        <item>@string/about</item>
    </string-array>

    <!-- Categories -->
    <string name="category_dance">Dance</string>
    <string name="category_gallery">Gallery</string>
    <string name="category_music">Music</string>
    <string name="category_theatre">Theatre</string>
    <string name="category_other">Other</string>

    <!-- Category Filter-->
    <string name="filter_categories">Filter Categories</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string-array name="event_filter_categories">
        <item>@string/category_dance</item>
        <item>@string/category_gallery</item>
        <item>@string/category_music</item>
        <item>@string/category_theatre</item>
        <item>@string/category_other</item>
    </string-array>

    <!-- Event IDs for Flurry Analytics -->
    <string name="flurry_about_pca">About PCA Selected</string>
    <string name="flurry_add_to_calendar">Add to Calendar Selected</string>
    <string name="flurry_directions">Directions Selected</string>
    <string name="flurry_directory_row">Directory Row Selected</string>
    <string name="flurry_event_filter">Event Filter Applied</string>
    <string name="flurry_event">Event Selected</string>
    <string name="flurry_get_cat_app">Get the CAT App selected</string>
    <string name="flurry_map_callout">Map Callout Selected</string>
    <string name="flurry_parking_directions">Parking Directions Selected</string>

    <!-- Error messages -->
    <string name="error_no_events">Oops! No Events Found</string>
    <string name="error_no_venues">Oops! No Venues Found</string>
    <string name="error_check_connection">Our bad. Please check network connection and try again.</string>

</resources>