<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/button_map"
            style="@style/button_base"
            android:background="@drawable/bg_green_item"
            android:text="@string/map" />

        <Button
            android:id="@+id/button_venue"
            style="@style/button_base"
            android:background="@drawable/bg_orange_item"
            android:text="@string/venues" />

        <Button
            android:id="@+id/button_event"
            style="@style/button_base"
            android:background="@drawable/bg_blue_item"
            android:text="@string/events" />

        <Button
            android:id="@+id/button_transportation"
            style="@style/button_base"
            android:background="@drawable/bg_purple_item"
            android:text="@string/transportation" />
    </LinearLayout>

</ScrollView>