<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_container_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_card">

        <RelativeLayout
            android:id="@+id/image_container"
            style="@style/card_base"
            android:layout_height="144dp">

            <ImageView
                android:id="@+id/venue_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/venue_category_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/venue_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/li_header_height"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:gravity="center"
                android:textSize="@dimen/text_header"
                android:paddingTop="@dimen/padding_text"
                android:paddingBottom="@dimen/padding_text"
                android:paddingLeft="@dimen/padding_card"
                android:paddingRight="@dimen/padding_card"
                android:background="@color/black_overlay"
                android:textColor="@color/text_white"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <LinearLayout
            style="@style/card_base"
            android:id="@+id/address_container">

            <TextView
                style="@style/card_header_text"
                android:text="@string/venue_address"/>

            <TextView
                style="@style/card_body_text"
                android:id="@+id/venue_address"/>

            <View style="@style/card_divider"/>
            
            <Button
                style="@style/card_button"
                android:id="@+id/view_on_map_button"
                android:text="@string/venue_view_on_map"/>

            <View style="@style/card_divider"/>

            <Button
                style="@style/card_button"
                android:id="@+id/get_directions_button"
                android:text="@string/venue_get_directions"/>

        </LinearLayout>

        <RelativeLayout
            style="@style/card_base"
            android:id="@+id/description_container">

            <TextView
                style="@style/card_header_text"
                android:id="@+id/static_venue_description"
                android:text="@string/venue_description"/>

            <TextView
                style="@style/card_subheader_text"
                android:id="@+id/static_venue_category"
                android:paddingRight="@dimen/padding_text"
                android:layout_below="@id/static_venue_description"
                android:layout_alignParentLeft="true"
                android:text="@string/venue_category"/>

            <TextView
                style="@style/card_subheader_text"
                android:id="@+id/venue_category"
                android:paddingLeft="0dp"
                android:layout_below="@id/static_venue_description"
                android:layout_toRightOf="@id/static_venue_category"/>

            <TextView
                style="@style/card_subheader_text"
                android:id="@+id/static_venue_phone"
                android:paddingRight="@dimen/padding_text"
                android:layout_below="@id/static_venue_category"
                android:layout_alignParentLeft="true"
                android:text="@string/venue_phone_number"/>

            <TextView
                style="@style/card_subheader_text"
                android:id="@+id/venue_phone"
                android:paddingLeft="0dp"
                android:layout_below="@id/static_venue_category"
                android:layout_toRightOf="@id/static_venue_phone"/>

            <TextView
                style="@style/card_body_text"
                android:id="@+id/venue_description"
                android:layout_below="@id/static_venue_phone"
                android:layout_alignParentLeft="true"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>